v3.2.3.3-DEV
1. 优化代码
2. 修复系统托盘中文乱码
3. 优化启动速度
4. 修复开始脚本后立即按Alt+P无法正常关闭脚本的问题
5. 优化系统托盘